--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/react": "^2.10.3",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "axios": "^1.7.6",
@@ -23,6 +23,7 @@
     "leaflet-indoor": "^1.0.3",
     "leaflet-sidebar-v2": "^3.2.3",
     "leaflet.fullscreen": "^3.0.2",
+    "next-themes": "^0.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
