build: test-workflow v1.1 Configurando Vite para deploy

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -50,4 +50,5 @@ jobs:
             --image "${{ env.IMAGE_TAG }}" \
             --region "${{ env.REGION }}" \
             --platform managed \
-            --allow-unauthenticated
+            --allow-unauthenticated \
+            --port 3000
