--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: Build and Deploy to GCP
 on:
   push:
     branches:
-      - deploy-workflow
+      - main
 
 env:
   REGION: southamerica-east1
